# WasmGrapher

./: .gitignore  Cargo.toml  README.md  Visualization.md  rust-toolchain.toml
.github/workflows/: clippy.yml  format.yml  tests.yml
benches/: quadtree.rs  simulator.rs
grapher-bin/: Cargo.toml  README.md
src/: app.rs  errors.rs  event_dispatcher.rs  events.rs  graph_data.rs  lib.rs  quadtree.rs  renderer.rs  simulator.rs  web.rs
src/events/: gui_events.rs  render_event.rs  simulator_event.rs
src/renderer/: edge_shader.wgsl  elements.rs  events.rs  node_shader.wgsl  node_shape.rs  radial_menu_shader.wgsl  vertex_buffer.rs
src/renderer/elements/: cardinality.rs  characteristic.rs  element_type.rs  generic.rs  owl.rs  rdf.rs  rdfs.rs  xsd.rs
src/simulator/: components.rs  ressources.rs  systems.rs
src/simulator/components/: edges.rs  forces.rs  nodes.rs
src/simulator/ressources/: events.rs  simulator_vars.rs
src/simulator/systems/: force_compute.rs  position_compute.rs  position_update.rs  visibility_update.rs
src/web/: app.rs  graph_data.rs  renderer.rs
src/web/renderer/: events.rs  vertex_buffer.rs
src/web/renderer/elements/: characteristic.rs  element_type.rs  generic.rs
src/web/simulator/systems/: position_compute.rs  position_update.rs
