[package]
    authors=[
        "Alexander Neuhäuser <alexander.neuhaeuser@leafnova.net>",
        "nikarnik",
        "TheRealMorgenfrue",
    ]
    description="Simulate and visualize a force directed graph"
    edition="2024"
    exclude=[
        ".github/*",
        ".vscode/*",
        "example_images/*",
        "examples/reference.json",
        "tools/*",
    ]
    keywords=["force-directed-graph", "graph", "graphics", "simulation"]
    license-file="LICENSE"
    name="grapher"
    readme="README.md"
    repository="https://github.com/WebVOWL/WasmGrapher"
    version="0.4.3"

[lib]
    crate-type=["cdylib", "rlib"]

[dependencies]
    anyhow="1.0.0"
    bytemuck={version="1.16.0", features=["derive"]}
    glam="0.29.0"
    glyphon={git="https://github.com/grovesNL/glyphon", rev="de4b5b8"}
    log="0.4.0"
    rayon="1.10.0"
    rkyv="0.8.12"
    strum="0.27"
    strum_macros="0.27"
    web-time="1.1.0"
    wgpu={version="27.0.1", default-features=false, features=[
        "wgsl",
        "std",
        "parking_lot",
    ]}
    winit="0.30.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
    env_logger="0.11.0"
    glium="0.33.0"
    petgraph="0.6.5"
    pollster="0.4.0"
    rand="0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
    console_error_panic_hook="0.1.6"
    console_log="1.0.0"
    wasm-bindgen="0.2.100"
    wasm-bindgen-futures="0.4.50"

    [dependencies.web-sys]
        version="0.3.77"
        # https://docs.rs/web-sys/latest/web_sys/#modules
        features=["Document", "Element", "Window"]

    [dependencies.specs]
        default-features=false
        features=["derive", "parallel", "stdweb"]
        git="https://github.com/WebVOWL/specs"
        version="0.20.1"

[dev-dependencies]
    criterion={version="0.5.0", features=["html_reports"]}
    petgraph-gen="0.1.3"
    serde={version="1.0.0", features=["derive"]}
    serde_json="1.0.0"

[features]
    default=["web"]
    static=["wgpu/static-dxc"]
    web=["wgpu/web", "webgpu", "static"]
    webgl=["wgpu/webgl"]
    webgpu=["wgpu/webgpu"]

# Default profile for devs, fast to compile, okay enough to run
[profile.dev]
    debug=true
    debug-assertions=true
    incremental=true
    lto=false
    opt-level=1
    overflow-checks=true
    panic="unwind"

# This profile is used for production releases - compile time doesn't matter.
[profile.release]
    codegen-units=1
    debug=false
    debug-assertions=false
    incremental=false
    lto=true
    opt-level=3
    overflow-checks=false
    panic="abort"

# This profile is a production release with debug info.
# Used by developers to test and debug a production release
[profile.preview]
    debug=true
    inherits="release"

# Used for cargo bench
[profile.bench]
    incremental=true
    inherits="release"
