[package]
    authors=[
        "Alexander Neuhäuser <alexander.neuhaeuser@leafnova.net>",
        "nikarnik",
        "TheRealMorgenfrue",
    ]
    description="Simulate and visualize a force directed graph"
    edition="2024"
    exclude=[
        ".github/*",
        ".vscode/*",
        "example_images/*",
        "examples/reference.json",
        "tools/*",
    ]
    keywords=["force-directed-graph", "graph", "graphics", "simulation"]
    license-file="LICENSE"
    name="grapher"
    readme="README.md"
    repository="https://github.com/WebVOWL/WasmGrapher"
    version="0.5.3"

[lib]
    crate-type=["cdylib", "rlib"]

[workspace]
    members=["grapher-bin"]

[dependencies]
    anyhow="1.0.0"
    bytemuck={version="1.16.0", features=["derive"]}
    flume={version="0.12.0", default-features=false, features=["spin"]}
    glam="0.29.0"
    glyphon={git="https://github.com/grovesNL/glyphon", rev="de4b5b8"}
    log="0.4.0"
    rayon="1.10.0"
    rkyv="0.8.12"
    strum={version="0.27", features=["derive"]}
    web-time="1.1.0"
    wgpu={version="27.0.1", default-features=false, features=[
        "wgsl",
        "std",
        "parking_lot",
    ]}
    winit="0.30.0"

    [dependencies.specs]
        default-features=false
        features=["derive", "parallel", "stdweb"]
        git="https://github.com/WebVOWL/specs"
        version="0.20.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
    pollster="0.4.0"
    rand="0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
    console_error_panic_hook="0.1.6"
    wasm-bindgen="0.2.100"
    wasm-bindgen-futures="0.4.50"

    [dependencies.web-sys]
        version="0.3.77"
        # https://docs.rs/web-sys/latest/web_sys/#modules
        features=["Document", "Element", "Window"]

[dev-dependencies]
    grapher-bin={path="grapher-bin"}

[features]
    default=["web", "static"]
    dx12=["wgpu/dx12"]
    gles=["wgpu/gles"]
    metal=["wgpu/metal"]
    native=["dx12", "metal", "vulkan", "gles"]
    static=["wgpu/static-dxc"]
    vulkan=["wgpu/vulkan"]
    web=["wgpu/web", "webgpu"]
    webgl=["wgpu/webgl"]
    webgpu=["wgpu/webgpu"]

# Default profile for devs, fast to compile, okay enough to run
[profile.dev]
    debug=true
    debug-assertions=true
    incremental=true
    lto=false
    opt-level=1
    overflow-checks=true
    panic="unwind"

# This profile is used for production releases - compile time doesn't matter.
[profile.release]
    codegen-units=1
    debug=false
    debug-assertions=false
    incremental=false
    lto=true
    opt-level=3
    overflow-checks=false
    panic="abort"

# Used for cargo bench
[profile.bench]
    incremental=true
    inherits="release"
